# phaethon

./: README.mkdn
app/demo-stm32h7-nucleo/: app-h753.toml
drv/i2c-devices/src/: bme280.rs  ina260.rs  lib.rs
drv/stm32xx-i2c-server/src/: main.rs
idl/: nas-power-ctrl.idol
scripts/: phaethon-sensors.sh
sys/userlib/src/: units.rs
task/control-plane-agent/src/: inventory.rs
task/nas-power-ctrl/: Cargo.toml  build.rs
task/nas-power-ctrl-api/: Cargo.toml  build.rs
task/nas-power-ctrl-api/src/: lib.rs
task/nas-power-ctrl/src/: main.rs
task/nucleo-sensor-poll/: Cargo.toml
task/nucleo-sensor-poll/src/: main.rs
task/validate-api/src/: lib.rs
