[package]
name = "task-nucleo-sensor-poll"
description = "Polls BME280 and INA260 sensors on the Nucleo board"
version = "0.1.0"
edition = "2021"

[dependencies]
drv-i2c-api = { path = "../../drv/i2c-api" }
drv-i2c-devices = { path = "../../drv/i2c-devices" }
ringbuf = { path = "../../lib/ringbuf" }
task-sensor-api = { path = "../sensor-api" }
userlib = { path = "../../sys/userlib", features = ["panic-messages"] }

[build-dependencies]
anyhow = { workspace = true }

build-util = { path = "../../build/util" }
build-i2c = { path = "../../build/i2c" }
idol.workspace = true

[features]
no-ipc-counters = ["idol/no-counters"]

[[bin]]
name = "task-nucleo-sensor-poll"
test = false
doctest = false
bench = false

[lints]
workspace = true
